# dhscanner.codegen

./: .gitmodules  Dockerfile  Dockerfile.dev  Dockerfile.rel  Dockerfile.rel.aarch64  Dockerfile.rel.x64  README.md  dhscanner.cabal
.github/workflows/: main.yml
src/: ActualType.hs  CodeGen.hs  LoggingConfig.hs  Main.hs  Packages.hs  SymbolTable.hs
