cabal-version: 3.0
name: dhscanner
version: 0.1.0.0

-- The license under which the package is released.
license: MIT

-- The file containing the license text.
license-file: LICENSE

-- The package author(s).
author: Oren

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: Oren

-- A copyright notice.
-- copyright:
build-type: Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

common ghc_options
    
    ghc-options: -Wall -O2

executable codegen

    import: ghc_options

    main-is: Main.hs

    other-modules:
        CodeGen,
        ActualType,
        SymbolTable

    build-depends:
        base,
        containers,
        dhscanner-ast >= 1.1.1,
        dhscanner-bitcode >= 1.0.7,
        yesod-core,
        http-types,
        fast-logger,
        bytestring,
        wai-logger,
        wai-extra,
        warp,
        time,
        wai,
        aeson,
        array,
        yesod,
        text,
        mtl

    hs-source-dirs:
        src

    ghc-options: -Wall -threaded -Werror=missing-fields -O2

    default-language: Haskell2010
